--- a/code/jupyter/02.1 Exercise numpy.ipynb
+++ b/code/jupyter/02.1 Exercise numpy.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +58,9 @@
     "# your solution\n",
     "################\n",
     "\n",
-    "A = np.matrix(...)\n",
-    "B = ...\n",
-    "C = ...\n",
+    "A = np.matrix([[3,2,1],[6,-3,0],[1,2,9]])\n",
+    "B = np.matrix([[-4,1], [7,3], [2,5]])\n",
+    "C = A*B\n",
     "\n",
     "print(C)"
    ]
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +101,9 @@
     }
    ],
    "source": [
-    "D = np.array(...)\n",
-    "E = ...\n",
-    "F = ...\n",
+    "D = np.array([[3,2,1],[6,-3,0],[1,2,9]])\n",
+    "E = np.array([[-4,1], [7,3], [2,5]])\n",
+    "F = D@E\n",
     "\n",
     "print(F)"
    ]
@@ -124,13 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean 2.499180710180253, std 0.7256600579665619\n"
+     ]
+    }
+   ],
    "source": [
     "################\n",
     "# your solution\n",
-    "################\n"
+    "################\n",
+    "#rand = np.random.normal(2.5, .75, 250)\n",
+    "\n",
+    "rand = np.zeros([10, 250])\n",
+    "\n",
+    "for i in range(10):\n",
+    "    rand[i] = np.random.normal(2.5, .75, 250)\n",
+    "    \n",
+    "m = np.mean(rand)\n",
+    "std = np.std(rand)\n",
+    "\n",
+    "print('mean {}, std {}'.format(m, std))"
    ]
   },
   {
@@ -162,13 +181,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "################\n",
     "# your solution\n",
-    "################\n"
+    "################\n",
+    "A = np.array([\n",
+    "    [3,2,1,0,0],\n",
+    "   [2,3,2,1,0],\n",
+    "   [1,2,3,2,1],\n",
+    "   [0,1,2,3,2],\n",
+    "   [0,0,1,2,3]\n",
+    "])\n",
+    "(lam,vec)=np.linalg.eig(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.65427349 4.56155281 1.74770274 0.43844719 0.59802377]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.28733703e-01  5.57345410e-01  6.17548407e-01  4.35162146e-01\n",
+      "   1.02801351e-01]\n",
+      " [ 4.85676469e-01  4.35162146e-01 -1.78297793e-01 -5.57345410e-01\n",
+      "  -4.82004424e-01]\n",
+      " [ 5.58663621e-01 -6.11410290e-16 -4.16758592e-01 -3.92388876e-15\n",
+      "   7.17082447e-01]\n",
+      " [ 4.85676469e-01 -4.35162146e-01 -1.78297793e-01  5.57345410e-01\n",
+      "  -4.82004424e-01]\n",
+      " [ 3.28733703e-01 -5.57345410e-01  6.17548407e-01 -4.35162146e-01\n",
+      "   1.02801351e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.000000000000007\n"
+     ]
+    }
+   ],
+   "source": [
+    "det = np.linalg.det(A)\n",
+    "print(det)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.000000000000036"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.prod(lam)"
    ]
   }
  ],
@@ -188,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
